# video-processor

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  INSTALL.md  MANIFEST.in  Makefile  README.md  install.bat  install.sh  pyproject.toml  run.py  setup.py
app/: __init__.py  main.py  requirements.txt
app/config/: config.py
app/core/: ai_analyzer.py  asr_client.py  audio_extractor.py  clip_cutter.py  exceptions.py  persistence.py  subtitle_renderer.py  task_manager.py  transcript_merger.py  video_processor.py
app/services/: http_server.py  websocket_server.py
app/utils/: file.py  logger.py  path_security.py  time.py  timeline_visualizer.py
docs/: QUICK_START.md
scripts/: download_and_test.py  test_clip.py
tests/: conftest.py  test_ai_analyzer.py  test_asr_client.py  test_audio_extractor.py  test_clip_cutter.py  test_connectivity.py  test_subtitle_renderer.py  test_task_manager.py  test_time.py  test_transcript_merger.py  test_video_processor.py
