[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-processor"
version = "1.0.0"
description = "智能视频内容分析和剪辑系统，支持语音识别、AI分析和自动剪辑"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Video Processor Team"}
]
keywords = ["video", "ai", "clip", "transcription", "asr", "deepseek"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=0.19.0",
    "opencv-python>=4.5.0",
    "numpy>=1.19.0",
    "aiohttp>=3.8.0",
    "moviepy>=1.0.3",
    "oss2>=2.15.0",
    "aliyun-python-sdk-core>=2.13.3",
    "aliyun-python-sdk-nls-cloud-meta>=0.0.1",
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "python-multipart>=0.0.5",
    "yt-dlp>=2023.12.30",
    "websockets>=11.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.scripts]
video-processor = "app.main:main"
vp = "app.main:main"
video-server = "app.services.http_server:start_server"
video-ws-server = "app.services.websocket_server:start_server"

[project.urls]
Homepage = "https://github.com/yourusername/video-processor"
Repository = "https://github.com/yourusername/video-processor"
Documentation = "https://github.com/yourusername/video-processor/blob/main/README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "src*"]
exclude = ["tests*", "docs*", "output*", "data*", "logs*", "temp*"]

[tool.setuptools.exclude-package-data]
"*" = [
    "output/*",
    "temp/*",
    "cuts/*",
    "*.log",
    "*.mp3",
    "*.mp4",
    "*.mov",
]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.json"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["app"]
